<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <ImageView
        android:layout_below="@+id/toolbar"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/loginpagebackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/welcome"
            android:textSize="40sp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:inputType="text"
            android:hint="@string/user_name"
            android:textColor="#A2A2A2"
            android:paddingStart="16dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="40dp"
            android:autofillHints="User Name" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:textColor="#A2A2A2"
            android:hint="@string/email"
            android:paddingStart="16dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pass"
            android:inputType="textPassword"
            android:textColor="#A2A2A2"
            android:hint="@string/password"
            android:paddingStart="16dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <ImageView
            android:id="@+id/signupButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/signupbutton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>
</RelativeLayout>